pc - update demo-spring-react-minimal starting code as basis for MenuManger app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
 app.member.hosted-domain=ucsb.edu
 app.admin.emails=phtcon@ucsb.edu
 
+# These values are placeholders so that test cases pass
+# DO NOT CHANGE THEM HERE.  
+# Instead, change them in secrets-localhost.properties
+#  and/or secrets-heroku.properties
+app.namespace=https://OVERRIDE-THIS-IN-secrets-localhost.properties
+app.admin.emails=phtcon@ucsb.edu
+auth0.domain=YOUR-AUTH0-TENANT.us.auth0.com
+auth0.clientId=FILL-IN-AUTH0-CLIENT-ID-IN-secrets-localhost.properties
+security.oauth2.resource.id=https://OVERRIDE-THIS-IN-secrets-localhost.properties
+security.oauth2.resource.jwk.keySetUri=https://${auth0.domain}/.well-known/jwks.json
+
+
 spring.config.location=classpath:/
 @environment-properties@
 
