--- a/pom.xml
+++ b/pom.xml
@@ -194,7 +194,7 @@
 					<archive>
 						<manifest>
 							<!-- full package name of class with the main you want to run -->
-							<mainClass>edu.ucsb.changeme.DemoApplication</mainClass>
+							<mainClass>edu.ucsb.menumanager.DemoApplication</mainClass>
 
 						</manifest>
 					</archive>
